Updated res folder + script/cleaned up some files

--- a/Assignment 4/res/README
+++ b/Assignment 4/res/README
@@ -62,5 +62,5 @@ in the script.txt file.
 
 === SOURCE OF IMAGE ===
 
-"dog.ppm" Image sourced from:
-https://people.com/pets/new-app-nose-id-finds-lost-dog-with-nose-print/
+"northeastern.jpeg" Image sourced from:
+https://mcla.us/team/northeastern/2015/schedule.html
