Fixed source of image

--- a/Assignment 4/res/README
+++ b/Assignment 4/res/README
@@ -77,5 +77,5 @@ them in multiple function objects.
 
 === SOURCE OF IMAGE ===
 
-"northeastern.jpeg" Image sourced from:
-https://mcla.us/team/northeastern/2015/schedule.html
+"dog.png" Image sourced from:
+https://www.medicalnewstoday.com/articles/322868
